Light/dark mode fix

--- a/client/src/app/styles/Code.css
+++ b/client/src/app/styles/Code.css
@@ -1,4 +1,4 @@
-.hljs {
+.dark .hljs {
 	margin-top: 1em;
 	background-color: #0D0D0D;
 	border-radius: 0.5em;
@@ -6,11 +6,28 @@
 	border: solid 1px rgb(42, 42, 42);
 }
 
-code {
+.dark code {
 	background-color: #0D0D0D;
 	border: solid 1px rgb(42, 42, 42);
 	font-family: "Courier New", monospace;
 	font-size: 1em;
 	padding: 0 0.4em 0 0.4em;
 	color: #a37de4;
+}
+
+.hljs {
+	margin-top: 1em;
+	background-color: #e3e3e3;
+	border-radius: 0.5em;
+	padding: 0;
+	border: solid 1px rgb(42, 42, 42);
+}
+
+code {
+	background-color: #e3e3e3;
+	border: solid 1px rgb(42, 42, 42);
+	font-family: "Courier New", monospace;
+	font-size: 1em;
+	padding: 0 0.4em 0 0.4em;
+	font-weight: 400;
 }
